# IFT6285-Traitement-automatique-des-langues-naturelles

./: code_de_test_NeuralNet.py  code_de_train_NeuralNet.py  code_de_train_logistic_reg.py  generation_des_donnees.py  pyproject.toml  test-devinesqui.csv  testdata-deviensqui  train-devinesqui.csv  traindata-deviensqui  vectorizer1  vetorization_des_donnees.py
Projet1/: README.md  __init__.py  clfLogisticReg  code_bert.py  code_de_test_logistic_reg.py  desc-devinesqui.txt
